# authorization_api

./: .gitignore  Cargo.toml  README.md
src/: db.rs  error.rs  main.rs  schema.rs
src/models/: issued_jwt_tokens.rs  mod.rs  users.rs
src/posts/: login.rs  mod.rs  registry.rs
src/structs/: auth_output.rs  claims.rs  mod.rs  user_login_input.rs  user_registration_input.rs
