[package]
name = "authorization-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
diesel = "2.1.0"
diesel-async = { version = "0.6.1", features = ["postgres", "bb8"] }
dotenv = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
bb8 = "0.9.0"
argon2 = { version = "0.5.3"}
rand_core = { version = "0.6", features = ["getrandom"]}
thiserror = "2.0.12"
serde_json = "1.0.141"
regex = "1.11.1"
jsonwebtoken = "9.3.1"
chrono = "0.4"
uuid = { version = "1.17.0", features = ["v4"] }



